--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "express": "^4.15.3",
     "mongodb": "^2.2.27",
     "pug": "^2.0.0-rc.1",
-    "socket.io": "^2.0.1"
-  },
-  "devDependencies": {
+    "socket.io": "^2.0.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
